--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,12 @@ MAIN
 .blue{
     background-color: #006CFA;
     border: 1px solid white;
-    padding: 10px;
+    padding: .625rem;
+}
+.second-blue{
+    background-color: #006CFA;
+    border: 1px solid white;
+    padding: 1.25rem;
 }
 .text{
     color: white;
@@ -20,10 +25,12 @@ MAIN
 .green{
     background-color: #00E165;
     border: 1px solid white;
-    padding: 10px;
+    padding: .625rem;
 }
 
-
+section{
+    padding-bottom: .9375rem;
+}
 
 
 /* 
